<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/my_courses_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/my_courses" />

    <item
        android:id="@+id/explore_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />

    <item
        android:id="@+id/events_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />

    <item
        android:id="@+id/profile_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

</menu>