<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.qs.mvvm.structures.view.login.LoginViewModel" />

        <variable
            name="repository"
            type="com.qs.mvvm.structures.view.login.LoginRepository" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/footerDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_24">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/let_get_started"
                    android:textColor="@color/onBackground"
                    android:textSize="@dimen/sp_24"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailId"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:elevation="@dimen/text_input_layout_elevation"
                    android:hint="@string/email_id"
                    android:textColorHint="@color/hint"
                    app:errorMessage='@{repository.errorEmail}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:text="@={repository.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:elevation="@dimen/text_input_layout_elevation"
                    android:hint="@string/password"
                    android:textColorHint="@color/hint"
                    app:errorMessage='@{repository.errorPass}'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailId"
                    app:passwordToggleDrawable="@drawable/pass_toggle_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={repository.pass}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/forgot_password"
                    android:textColor="@color/onBackground"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:backgroundTint="@color/buttonBackground"
                    android:onClick="@{vm::loginClick}"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/login"
                    android:textColor="@color/buttonText"
                    android:textSize="@dimen/sp_16"
                    app:cornerRadius="@dimen/dp_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                <TextView
                    android:id="@+id/loginWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_60"
                    android:text="@string/or_login_with"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/socialLoginLayout"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginWith">

                    <ImageView
                        android:id="@+id/googleSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:background="@drawable/bg_border"
                        android:padding="@dimen/dp_16"
                        android:src="@drawable/ic_google" />

                    <ImageView
                        android:id="@+id/facebookSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:layout_marginEnd="@dimen/dp_8"
                        android:background="@drawable/bg_border"
                        android:padding="@dimen/dp_16"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:background="@drawable/bg_border"
                        android:padding="@dimen/dp_16"
                        android:src="@drawable/ic_apple" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/footerDivider"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            android:alpha="0.5"
            app:dividerColor="@color/outline"
            app:layout_constraintBottom_toTopOf="@+id/footerLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footerLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:background="@color/bg_footer"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_30"
            android:paddingEnd="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/footerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_a_member_yet"
                android:textColor="@color/heading_small"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/registerNowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:includeFontPadding="false"
                android:onClick="@{repository::registerNowClick}"
                android:paddingTop="@dimen/dp_2"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/register_now"
                android:textColor="@color/onBackground"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/footerText"
                tools:text="@string/register_now" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/registerNowText"
                app:layout_constraintStart_toEndOf="@+id/registerNowText"
                app:layout_constraintTop_toTopOf="@+id/registerNowText" />

            <View
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_1"
                android:background="@color/onBackground"
                app:layout_constraintEnd_toEndOf="@+id/registerNowText"
                app:layout_constraintStart_toStartOf="@+id/registerNowText"
                app:layout_constraintTop_toBottomOf="@+id/registerNowText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>